# auto-import

./: .autoimport  .autoimport.cfg  CHANGELOG.md  README.md  TODO  auto-import.cabal  cabal.project
.github/workflows/: ci.yml
play/: Main.hs  Ops.hs
src/: AutoImport.hs
src/AutoImport/: Config.hs  GhcFacade.hs
test/: Main.hs
test-modules/: .autoimport  Case1.hs.expected  Case1.hs.input  Case10.hs.expected  Case10.hs.input  Case11.hs.expected  Case11.hs.input  Case12.hs.expected  Case12.hs.input  Case13.hs.expected  Case13.hs.input  Case14.hs.expected  Case14.hs.input  Case15.hs.expected  Case15.hs.input  Case16.hs.expected  Case16.hs.input  Case17.hs.expected  Case17.hs.input  Case18.hs.expected  Case18.hs.input  Case19.hs.expected  Case19.hs.input  Case2.hs.expected  Case2.hs.input  Case20.hs.expected  Case20.hs.input  Case21.hs.expected  Case21.hs.input  Case22.hs.expected  Case23.hs.expected  Case23.hs.input  Case24.hs.expected  Case24.hs.input  Case25.hs.expected  Case25.hs.input  Case3.hs.expected  Case3.hs.input  Case4.hs.expected  Case4.hs.input  (+14 more)
