cabal-version:      3.0
name:               auto-import
version:            0.1.0.0
synopsis:           Automatically add import statements
description:        Automatically add import statements based on configuration
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
copyright:          2025 Aaron Allen
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md
tested-with: GHC == 9.12.1, GHC == 9.10.1, GHC == 9.8.1, GHC == 9.6.1

source-repository head
  type: git
  location: https://github.com/aaronallen8455/auto-import

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AutoImport
                      AutoImport.GhcFacade
                      AutoImport.Config
    -- other-modules:
    default-extensions: LambdaCase, OverloadedStrings
    build-depends:    base < 5,
                      ghc >= 9.6 && < 9.13,
                      ghc-boot,
                      ghc-exactprint,
                      ghc-paths,
                      bytestring < 0.13,
                      megaparsec >= 9 && < 10,
                      text,
                      containers,
                      directory,
                      time
    hs-source-dirs:   src
    default-language: GHC2021

test-suite auto-import-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        auto-import,
        directory,
        process,
        tasty,
        tasty-hunit
