cabal-version:      3.0
name:               test-modules
version:            0.1.0.0
extra-source-files:
  *.input
  *.expected

common attrs
    ghc-options: -fplugin AutoImport
    build-depends:    base,
                      auto-import
    hs-source-dirs:   .
    default-language: GHC2021
    default-extensions: LambdaCase

executable Case1
    import: attrs
    main-is: Case1.hs

executable Case2
    import: attrs
    main-is: Case2.hs

executable Case3
    import: attrs
    main-is: Case3.hs

executable Case4
    import: attrs
    main-is: Case4.hs

executable Case5
    import: attrs
    main-is: Case5.hs

executable Case6
    import: attrs
    main-is: Case6.hs

executable Case7
    import: attrs
    main-is: Case7.hs

executable Case8
    import: attrs
    main-is: Case8.hs

executable Case9
    import: attrs
    main-is: Case9.hs

executable Case10
    import: attrs
    main-is: Case10.hs

executable Case11
    import: attrs
    main-is: Case11.hs

executable Case12
    import: attrs
    main-is: Case12.hs

executable Case13
    import: attrs
    main-is: Case13.hs

executable Case14
    import: attrs
    main-is: Case14.hs

executable Case15
    import: attrs
    main-is: Case15.hs

executable Case16
    import: attrs
    main-is: Case16.hs
    other-modules: Foo

executable Case17
    import: attrs
    main-is: Case17.hs
    other-modules: Foo

executable Case18
    import: attrs
    main-is: Case18.hs
    other-modules: Ops

executable Case19
    import: attrs
    main-is: Case19.hs
    other-modules: Ops

executable Case20
    import: attrs
    main-is: Case20.hs

executable Case21
    import: attrs
    main-is: Case21.hs

executable Case22
    import: attrs
    main-is: Case22.hs
    other-modules: DK

executable Case23
    import: attrs
    main-is: Case23.hs

executable Case24
    import: attrs
    main-is: Case24.hs
